- Optimized require_once() and include_once() by eliminating fopen(3)
  on second usage. (Dmitry)
- Optimized request shutdown sequence. Restoring ini directives now iterates
  only over modified directives instead of all. (Dmitry)

- Fixed memory leaks in openssl streams context options. (Pierre)
- Fixed handling of extremely long paths inside tempnam() function. (Ilia)
- Fixed bug #38072 (boolean arg for mysqli_autocommit() is always true on 
  Solaris). (Tony)
- Fixed bug #38067 (Parameters are not decoded from utf-8 when using encoding
  option). (Dmitry)
- Fixed bug #38055 (Wrong interpretation of boolean parameters). (Dmitry)
- Fixed bug #38019 (segfault extending mysqli class). (Dmitry)
- Fixed bug #38005 (SoapFault faultstring doesn't follow encoding rules).
  (Dmitry)
- Fixed bug #38004 (Parameters in SoapServer are decoded twice). (Dmitry)
- Fixed bug #38003 (in classes inherited from MySQLi it's possible to call 
  private constructors from invalid context). (Tony)
- Fixed bug #37987 (invalid return of file_exists() in safe mode). (Ilia)
- Fixed bug #37947 (zend_ptr_stack reallocation problem). (Dmitry)
- Fixed bug #37931 (possible crash in OCI8 after database restart 
  when using persistent connections). (Tony)
- Fixed bug #37920 (compilation problems on z/OS). (Tony)
- Fixed bug #37864 (file_get_contents() leaks on empty file). (Hannes)
- Fixed bug #37862 (Integer pointer comparison to numeric value).
  (bugs-php at thewrittenword dot com)
- Fixed bug #37816 (ReflectionProperty does not throw exception when accessing
  protected attribute). (Marcus)
- Fixed bug #37811 (define not using toString on objects). (Marcus)
- Fixed bug #37807 (segmentation fault during SOAP schema import). (Tony)
- Fixed bug #37806 (weird behavior of object type and comparison). (Marcus)
- Fixed bug #37780 (memory leak trying to execute a non existing file (CLI)).
  (Mike)
- Fixed bug #37747 (strtotime segfaults when given "nextyear"). (Derick)